# scheduler-mcp-server

./: .gitignore  BUILD.md  Dockerfile.public  EXTERNAL-BUILD.md  LICENSE  README.md  alembic.ini  defaults.yaml  docker-build.sh  healthcheck.sh  pyproject.toml  server_control.sh
scripts/: conformance-phase1.sh  final-evidence-validator-1404a.sh  final-evidence-validator-1404b.sh  final-evidence-validator-1404c.sh  final-evidence-validator-1404d.sh  final-evidence-validator-1404f.sh  final-evidence-validator-1405.sh  final-evidence-validator-1406.sh  final-evidence-validator-1407.sh  final-evidence-validator-1409.sh  final-evidence-validator.sh  sync-ui-dist.sh
src/scheduler_mcp/: __init__.py  _runtime.py  app.py  audit.py  cache.py  chain.py  clock.py  config.py  idam.py  idam_sql.py  jobs.py  leader.py  mcp_tools.py  metrics.py  obs.py  quotas.py  report.py  server.py  storage.py  tick.py  trigger.py  web_login.py  worker.py  worker_lifecycle.py
src/scheduler_mcp/adapters/: __init__.py  base.py  chain.py  code_runner.py  external_http.py  external_mcp.py  registered_tool.py  sandbox_command.py
src/scheduler_mcp/api/: __init__.py  a2a.py  admin_config.py  approvals.py  audit.py  chains.py  context.py  health.py  idam_admin.py  nl_chain.py  registry.py  runs.py  schedules.py
src/scheduler_mcp/db/: __init__.py  engine.py
src/scheduler_mcp/db/migrations/: env.py
src/scheduler_mcp/db/migrations/versions/: 0001_initial.py  0002_approvals.py  0003_idam_sql_backend.py
src/scheduler_mcp/db/models/: __init__.py  approval.py  base.py  chain.py  chain_run.py  chain_step_run.py  external_target.py  project_registry.py  schedule.py  schedule_fire_window.py  schedule_run.py  scheduler_context.py
src/scheduler_mcp/registry/: __init__.py  agent_card_poller.py  models.py  service.py  terraform_loader.py
